# diagnostics

diagnostic_aggregator/example/: example_analyzers.yaml  example_pub.py
diagnostic_aggregator/include/diagnostic_aggregator/: aggregator.hpp
diagnostic_aggregator/src/: aggregator.cpp
redundancy_group_analyzer/: CMakeLists.txt  package.xml  plugin_description.xml
redundancy_group_analyzer/include/redundancy_group_analyzer/: redundancy_group.hpp
redundancy_group_analyzer/src/: redundancy_group.cpp
